--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -1,9 +1,7 @@
 FROM python:3.9
 
-RUN pip install fastapi
-RUN pip install "uvicorn[standard]"
-RUN pip install requests
-RUN pip install pytest
+Copy ./req.txt .
+RUN pip install -r req.txt
 
 
 WORKDIR /app
